--- a/npm-package-maintenance-cycle/package.html
+++ b/npm-package-maintenance-cycle/package.html
@@ -63,7 +63,7 @@
 <html>
 
 <body>
-    <h1>Package Maintenance Sheet - [AppName] - [Date of last update]</h1>
+    <h1>Package Maintenance Sheet - [repository name]</h1>
     <h2>Legend</h2>
     <div class="legend">
         <div class="row stable">
@@ -83,6 +83,29 @@
             <div>Contains critical security issues and has to be replaced or updated.</div>
         </div>
     </div>
+    <br>
+    <div class="table">
+        <div class="row row--header">
+            <div id="package">Package</div>
+            <div id="environment">Environment</div>
+            <div id="description">Description</div>
+            <div id="usage">Usage</div>
+            <div id="essential">Essential</div>
+            <div id="stability">Stability</div>
+            <div id="semantic">Semantic</div>
+            <div id="last-check">Last Update</div>
+        </div>
+        <div class="row info">
+            <div id="package">Name of package</div>
+            <div id="environment">Runtime environment of package</div>
+            <div id="description">What is the package in general for?</div>
+            <div id="usage">Why is the package is used in the app?</div>
+            <div id="essential">Is the package essential for the app?</div>
+            <div id="stability">Is the package stable, and if not why?</div>
+            <div id="semantic">Does the package support semantic versioning?</div>
+            <div id="last-check">Date of last update</div>
+        </div>
+    </div>
     <h2>Production Dependencies</h2>
     <div class="table">
         <div class="row row--header">
@@ -93,17 +116,7 @@
             <div id="essential">Essential</div>
             <div id="stability">Stability</div>
             <div id="semantic">Semantic</div>
-            <div id="last-check">Last Check</div>
-        </div>
-        <div class="row info">
-            <div id="package">Name of package</div>
-            <div id="environment">Runtime environment of package</div>
-            <div id="description">What is the package for?</div>
-            <div id="usage">Why is the package is used in the app?</div>
-            <div id="essential">Is the package essential for running the app?</div>
-            <div id="stability">Is the package stable, and if not why?</div>
-            <div id="semantic">Does the package support semantic versioning?</div>
-            <div id="last-check">Date of last stability check</div>
+            <div id="last-check">Last Update</div>
         </div>
     </div>
 
@@ -118,17 +131,7 @@
             <div id="essential">Essential</div>
             <div id="stability">Stability</div>
             <div id="semantic">Semantic</div>
-            <div id="last-check">Last Check</div>
-        </div>
-        <div class="row info">
-            <div id="package">Name of package</div>
-            <div id="environment">Runtime environment of package</div>
-            <div id="description">What is the package for?</div>
-            <div id="usage">Why is the package is used in the app?</div>
-            <div id="essential">Is the package essential for developing the app?</div>
-            <div id="stability">Is the package stable, and if not why?</div>
-            <div id="semantic">Does the package support semantic versioning?</div>
-            <div id="last-check">Date of last stability check</div>
+            <div id="last-check">Last Update</div>
         </div>
     </div>
 
