--- a/npm-package-maintenance-cycle/package.html
+++ b/npm-package-maintenance-cycle/package.html
@@ -93,7 +93,7 @@
             <div id="essential">Essential</div>
             <div id="stability">Stability</div>
             <div id="semantic">Semantic</div>
-            <div id="last-check">Last Update</div>
+            <div id="last-update">Last Update</div>
         </div>
         <div class="row info">
             <div id="package">Name of package</div>
@@ -103,7 +103,7 @@
             <div id="essential">Is the package essential for the app?</div>
             <div id="stability">Is the package stable, and if not why?</div>
             <div id="semantic">Does the package support semantic versioning?</div>
-            <div id="last-check">Date of last update</div>
+            <div id="last-update">Date of last update</div>
         </div>
     </div>
     <h2>Production Dependencies</h2>
@@ -116,7 +116,7 @@
             <div id="essential">Essential</div>
             <div id="stability">Stability</div>
             <div id="semantic">Semantic</div>
-            <div id="last-check">Last Update</div>
+            <div id="last-update">Last Update</div>
         </div>
     </div>
 
@@ -131,7 +131,7 @@
             <div id="essential">Essential</div>
             <div id="stability">Stability</div>
             <div id="semantic">Semantic</div>
-            <div id="last-check">Last Update</div>
+            <div id="last-update">Last Update</div>
         </div>
     </div>
 
